Fixed page loading without z-index & .project banners height at low resolutions

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ main {
     overflow: auto;
     max-width: 1080px;
     margin: 0 auto;
-    height: 55vh;
+    height: 70vh;
     width: 100vw;
     justify-content: center;
 }
@@ -137,6 +137,7 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     gap: 1vh;
+    z-index: 9999;
 }
 
 #promotion {
@@ -197,11 +198,11 @@ main {
 
 @media only screen and (max-width: 1079px) {
     main {
-        height: 215vh;
+        height: 175vh;
     }
     
     #portfolio {
-        max-width: calc(20vh + 4rem);
+        max-width: calc(35vh + 4rem) !important;
         flex-direction: column;
         flex-basis: 55vh;
         row-gap: 1rem;
@@ -209,7 +210,8 @@ main {
     }
 
     .project {
-        max-width: calc(20vh + 4rem);
+        max-width: calc(35vh + 4rem) !important;
+        width: calc(30vh + 4rem) !important;
     }
 }
 
@@ -225,7 +227,7 @@ main {
 
 .project img {
     /* Dimensions */
-    max-width: 20vh;
+    max-width: 35vh;
     margin: 2rem;
     margin-bottom: 0 !important;
 
@@ -238,7 +240,7 @@ main {
     
     margin-left: 2rem;
     margin-bottom: 1rem;
-    max-width: 20vh;
+    max-width: 35vh;
 
     /* Font */
     font-family: 'Dosis';
@@ -261,6 +263,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    z-index: -9999;
 }
 
 #contact-article div {
@@ -281,6 +284,9 @@ main {
     /* Positioning and dimensions */
     position: absolute;
     max-width: 1080px;
+
+    /* Display */
+    z-index: -9999;
 }
 
 #about-article p {
